--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,12 @@ android {
 }
 
 dependencies {
+    // Modules
+    implementation project(path: ':core')
+    implementation project(path: ':shared')
+    implementation project(path: ':remote')
+    implementation project(path: ':presentation')
+    implementation project(path: ':data')
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
