--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,11 @@ android {
 
 dependencies {
     // Modules
-    implementation project(path: ':core')
-    implementation project(path: ':shared')
-    implementation project(path: ':remote')
-    implementation project(path: ':presentation')
-    implementation project(path: ':data')
+    implementation(project(Modules.core))
+    implementation(project(Modules.shared))
+    implementation(project(Modules.remote))
+    implementation(project(Modules.presentation))
+    implementation(project(Modules.data))
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
