--- a/data/build.gradle
+++ b/data/build.gradle
@@ -32,8 +32,8 @@ android {
 
 dependencies {
     // Modules
-    implementation project(path: ':shared')
-    implementation project(path: ':core')
+    implementation(project(Modules.shared))
+    implementation(project(Modules.core))
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
