--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -32,7 +32,7 @@ android {
 
 dependencies {
     // Modules
-    implementation project(path: ':core')
+    implementation(project(Modules.core))
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
