--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.UiDep
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -47,26 +49,27 @@ android {
 }
 
 dependencies {
-    // Modules
     implementation(project(Modules.core))
     implementation(project(Modules.shared))
     implementation(project(Modules.remote))
     implementation(project(Modules.presentation))
     implementation(project(Modules.data))
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation(UiDep.coreKtx)
+    implementation(UiDep.lifeCycleRuntimeKtx)
+    implementation(UiDep.activityCompose)
+    implementation platform(UiDep.composeBom)
+    implementation(UiDep.composeUi)
+    implementation(UiDep.composeUiGraphics)
+    implementation(UiDep.composeUiToolingPreview)
+    implementation(UiDep.composeMaterial)
+    testImplementation(UiDep.Test.junit)
+    androidTestImplementation(UiDep.Test.testExtJunit)
+    androidTestImplementation(UiDep.Test.espressoCore)
+    androidTestImplementation(UiDep.Test.composeUiTestJunit)
+    debugImplementation(UiDep.composeUiTooling)
+    debugImplementation(UiDep.composeUiTestManifest)
+    androidTestImplementation platform(UiDep.composeBom)
+    implementation platform(UiDep.composeBom)
+
 }
