--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,8 @@ plugins {
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+
+//    id(Config.Plugins.com_android_application) version "8.0.0" apply false
+//    id(Config.Plugins.com_android_library) version "8.0.0" apply false
+//    id(Config.Plugins.org_jetbrains_kotlin_android) version "1.7.20" apply false
 }
