--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.CoreDep
+
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
@@ -31,10 +33,10 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation(CoreDep.coreKtx)
+    implementation(CoreDep.appCompat)
+    implementation(CoreDep.material)
+    testImplementation(CoreDep.Test.junit)
+    androidTestImplementation(CoreDep.Test.testExtJunit)
+    androidTestImplementation(CoreDep.Test.espressoCore)
 }
