--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.DataDep
+
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
@@ -31,14 +33,14 @@ android {
 }
 
 dependencies {
-    // Modules
     implementation(project(Modules.shared))
     implementation(project(Modules.core))
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation(DataDep.coreKtx)
+    implementation(DataDep.appCompat)
+    implementation(DataDep.material)
+    testImplementation(DataDep.Test.junit)
+    androidTestImplementation(DataDep.Test.testExtJunit)
+    androidTestImplementation(DataDep.Test.espressoCore)
+
 }
