--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,3 +1,5 @@
+import dependencies.SharedDep
+
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
@@ -31,13 +33,12 @@ android {
 }
 
 dependencies {
-    // Modules
     implementation(project(Modules.core))
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation(SharedDep.coreKtx)
+    implementation(SharedDep.appCompat)
+    implementation(SharedDep.material)
+    testImplementation(SharedDep.Test.junit)
+    androidTestImplementation(SharedDep.Test.testExtJunit)
+    androidTestImplementation(SharedDep.Test.espressoCore)
 }
